# oop_lab5

./: CMakeLists.txt  README.md  main.cpp
include/: dynamic_array.h  memory_resource_fixed_list.h
src/: memory_resource_fixed_list.cpp
test/: test_data.h
